@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebro_get_metric_names.3,v 1.1 2005-06-28 22:14:12 achu Exp $
+\."$Id: cerebro_get_metric_names.3,v 1.2 2005-07-15 23:39:51 achu Exp $
 \."#############################################################################
 .TH CEREBRO_GET_METRIC_NAMES 3 "May 2005" "LLNL" "LIBCEREBRO"
 .SH "NAME"
@@ -66,7 +66,7 @@ Timeout during protocol communication.
 .B CEREBRO_ERR_VERSION_INCOMPATIBLE
 Version incompatible with the metric server.
 .TP
-.B CEREBRO_ERR_METRIC_UNKNOWN
+.B CEREBRO_ERR_METRIC_INVALID
 The specified metric is unknown to the metric server.
 .TP
 .B CEREBRO_ERR_CONFIG_FILE
