@@ -44,8 +44,8 @@ _metric_server_protocol_err_code_conversion(u_int32_t err_code)
       return CEREBRO_ERR_VERSION_INCOMPATIBLE;
     case CEREBRO_METRIC_SERVER_PROTOCOL_ERR_PACKET_INVALID:
       return CEREBRO_ERR_PROTOCOL;
-    case CEREBRO_METRIC_SERVER_PROTOCOL_ERR_METRIC_UNKNOWN:
-      return CEREBRO_ERR_METRIC_UNKNOWN;
+    case CEREBRO_METRIC_SERVER_PROTOCOL_ERR_METRIC_INVALID:
+      return CEREBRO_ERR_METRIC_INVALID;
     case CEREBRO_METRIC_SERVER_PROTOCOL_ERR_PARAMETER_INVALID:
       return CEREBRO_ERR_PROTOCOL;
     case CEREBRO_METRIC_SERVER_PROTOCOL_ERR_INTERNAL_ERROR:
